tests/error/cast_unknown.gw
// [contains] in cast expression
 1 $ UnknownType;
